@startuml

title __IRREGULARPOLYGONS's Class Diagram__\n


    namespace elron.foundationwizard.com {
      namespace ui {
        namespace customcomponents {
          namespace irregularpolygons {
            class helron.foundationwizard.com.ui.customcomponents.irregularpolygons.Canvas {
                ~ cursor : Image
                ~ drawables : List<Shape>
                - cursorLocation : Point2D
                + Canvas()
                + addDrawable()
                + clearDrawables()
                + paintComponent()
                + removeDrawable()
                + setCursorLocation()
            }
          }
        }
      }
    }

  


    namespace elron.foundationwizard.com {
      namespace ui {
        namespace customcomponents {
          namespace irregularpolygons {
            class helron.foundationwizard.com.ui.customcomponents.irregularpolygons.CustomCursor {
                - cursor : Cursor
                + CustomCursor()
                + getCursor()
            }
          }
        }
      }
    }

  


    namespace elron.foundationwizard.com {
      namespace ui {
        namespace customcomponents {
          namespace irregularpolygons {
            class helron.foundationwizard.com.ui.customcomponents.irregularpolygons.GUIHelper {
                {static} - frame : JFrame
                {static} + showOnFrame()
            }
          }
        }
      }
    }

  


    namespace elron.foundationwizard.com {
      namespace ui {
        namespace customcomponents {
          namespace irregularpolygons {
            class helron.foundationwizard.com.ui.customcomponents.irregularpolygons.PolygonMouseCreator {
                ~ polygon : Float
                + PolygonMouseCreator()
                + mouseClicked()
                + mouseMoved()
                - leftClickAction()
                - rightClickAction()
            }
          }
        }
      }
    }

  


    namespace elron.foundationwizard.com {
      namespace ui {
        namespace customcomponents {
          namespace irregularpolygons {
            class helron.foundationwizard.com.ui.customcomponents.irregularpolygons.Test {
                {static} + main()
            }
          }
        }
      }
    }

  

  helron.foundationwizard.com.ui.customcomponents.irregularpolygons.Canvas -up-|> javax.swing.JPanel
  helron.foundationwizard.com.ui.customcomponents.irregularpolygons.PolygonMouseCreator -up-|> java.awt.event.MouseAdapter
  helron.foundationwizard.com.ui.customcomponents.irregularpolygons.PolygonMouseCreator o-- helron.foundationwizard.com.ui.customcomponents.irregularpolygons.Canvas : canvas


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
